--- a/services/dashboard/src/App/locales/es.json
+++ b/services/dashboard/src/App/locales/es.json
@@ -1,4 +1,33 @@
 {
   "PROFILE": "Perfil",
-  "LOGOUT": "Cerrar Sesión"
+  "LOGOUT": "Cerrar Sesión",
+
+  "INSTITUTIONS": "Instituciones",
+  "INSTITUTION":  "Institución",
+  "CONTENTS":     "Contenidos",
+  "CONTENT":      "Contenido",
+  "TELEVISIONS":  "Televisiones",
+  "TELEVISION":   "Televisión",
+  "LABELS":       "Etiquetas",
+  "USERS":        "Usuarios",
+  "SCHEDULE":     "Agenda",
+
+  "ACTION":     "Acción",
+  "NEW":        "Nuevo",
+  "CLOSE":      "Cerrar",
+  "SAVE":       "Guardar",
+
+  "LOCALITY":   "Localidad",
+  "CITY":       "Ciudad",
+  "TYPE":       "Tipo",
+  "URL":        "URL",
+  "IP":         "IP",
+  "MAC":        "MAC",
+  "START_DATE": "Fecha de inicio",
+  "END_DATE":   "Fecha de fin",
+  "FIRST_NAME": "Nombre",
+  "LAST_NAME":  "Apellido",
+  "EMAIL":      "Email",
+  "DESCRIPTION":"Descripción",
+  "NAME":       "Nombre"
 }
