--- a/services/dashboard/src/App/locales/en.json
+++ b/services/dashboard/src/App/locales/en.json
@@ -1,4 +1,33 @@
 {
   "PROFILE": "Profile",
-  "LOGOUT": "Logout"
+  "LOGOUT": "Logout",
+
+  "INSTITUTIONS": "Institutions",
+  "INSTITUTION":  "Institution",
+  "CONTENTS":     "Contents",
+  "CONTENT":      "Content",
+  "TELEVISIONS":  "Televisions",
+  "TELEVISION":   "Television",
+  "LABELS":       "Labels",
+  "USERS":        "Users",
+  "SCHEDULE":     "Schedule",
+
+  "ACTION":     "Action",
+  "NEW":        "New",
+  "CLOSE":      "Close",
+  "SAVE":       "Save",
+
+  "LOCALITY":   "Locality",
+  "CITY":       "City",
+  "TYPE":       "Type",
+  "URL":        "URL",
+  "IP":         "IP",
+  "MAC":        "MAC",
+  "START_DATE": "Start Date",
+  "END_DATE":   "End Date",
+  "FIRST_NAME": "First name",
+  "LAST_NAME":  "Last name",
+  "EMAIL":      "Email",
+  "DESCRIPTION":"Description",
+  "NAME":       "Name"
 }
