--- a/services/mobileDistriTV/app/src/main/res/values/strings.xml
+++ b/services/mobileDistriTV/app/src/main/res/values/strings.xml
@@ -1,7 +1,6 @@
 <resources>
     <string name="app_name">mobileDistriTV</string>
     <string name="app_preference_file_key">DistriTVApp</string>
-    <string name="device_info_title">Ingresar ID del dispositivo</string>
+    <string name="device_info_title">Ingresar el código</string>
     <string name="device_info_register_button">Registrar</string>
-
 </resources>
