--- a/services/dashboard/src/App/locales/es.json
+++ b/services/dashboard/src/App/locales/es.json
@@ -22,6 +22,7 @@
   "CLOSE":      "Cerrar",
   "SAVE":       "Guardar",
   "DELETE":     "Eliminar",
+  "SEARCH":     "Buscar",
 
   "TYPE_OF_AGENDA": "Tipo de agenda",
 
