--- a/services/dashboard/src/App/locales/en.json
+++ b/services/dashboard/src/App/locales/en.json
@@ -22,6 +22,7 @@
   "CLOSE":      "Close",
   "SAVE":       "Save",
   "DELETE":     "Delete",
+  "SEARCH":     "Search",
 
   "TYPE_OF_AGENDA": "Type of schedule",
 
