--- a/services/mobileDistriTV/app/src/main/res/values-es/strings.xml
+++ b/services/mobileDistriTV/app/src/main/res/values-es/strings.xml
@@ -8,8 +8,12 @@
     <string name="msg_tv_code_error">Ha ocurrido un error</string>
     <string name="msg_tv_code_connection_error">Ha ocurrido un error de conexión</string>
     <string name="msg_unavailable_content">No hay contenido disponible.</string>
+    <string name="info_card_version">Versión:</string>
+    <string name="info_card_tv_code">Código de TV:</string>
+    <string name="info_card_connection_status">Estado de conexión:</string>
+    <string name="language">Idioma:</string>
+    <string name="language_select">Seleccionar idioma</string>
     <string-array name="languages">
-        <item>Idioma</item>
         <item>Automático</item>
         <item>English</item>
         <item>Español</item>
