--- a/services/mobileDistriTV/app/src/main/res/values-es/strings.xml
+++ b/services/mobileDistriTV/app/src/main/res/values-es/strings.xml
@@ -4,10 +4,16 @@
     <string name="app_preference_file_key">DistriTVApp</string>
     <string name="device_info_title">Ingresar el código</string>
     <string name="device_info_register_button">Registrar</string>
+    <string name="device_info_switch_external">Utilizar almacenamiento externo para guardar los contenidos</string>
+    <string name="dialog_title">Guardar contenidos en almacenamiento externo</string>
+    <string name="dialog_message">Los contenidos descargados serán almacenados en una memoria externa. Asegurese de tener siempre conectado el almacenamiento, de lo contrario podría provocar un mal funcionamiento.\nUna vez que registre el código de TV no podrá deshacer esta decisión.</string>
+    <string name="dialog_accept">Aceptar</string>
+    <string name="dialog_cancel">Cancelar</string>
     <string name="msg_tv_code_invalid">El código ingresado no es válido</string>
     <string name="msg_tv_code_error">Ha ocurrido un error</string>
     <string name="msg_tv_code_connection_error">Ha ocurrido un error de conexión</string>
-    <string name="msg_unavailable_content">No hay contenido disponible.</string>
+    <string name="msg_unavailable_content">ERROR: No se encontró el contenido</string>
+    <string name="msg_error_external_storage">ERROR: Es posible que no se encuentre el almacenamiento externo o no se haya otorgado el permiso</string>
     <string name="info_card_version">Versión:</string>
     <string name="info_card_tv_code">Código de TV:</string>
     <string name="info_card_connection_status">Estado de conexión:</string>
