--- a/services/dashboard/src/App/locales/en.json
+++ b/services/dashboard/src/App/locales/en.json
@@ -27,7 +27,7 @@
   "TYPE_OF_AGENDA": "Type of schedule",
 
   "LOCALITY":   "Locality",
-  "CITY":       "City",
+  "CITY":       "Province",
   "TYPE":       "Type",
   "URL":        "URL",
   "IP":         "IP",
