--- a/services/dashboard/src/App/locales/es.json
+++ b/services/dashboard/src/App/locales/es.json
@@ -27,7 +27,7 @@
   "TYPE_OF_AGENDA": "Tipo de agenda",
 
   "LOCALITY":   "Localidad",
-  "CITY":       "Ciudad",
+  "CITY":       "Departamento",
   "TYPE":       "Tipo",
   "URL":        "URL",
   "IP":         "IP",
