--- a/services/dashboard/src/App/locales/en.json
+++ b/services/dashboard/src/App/locales/en.json
@@ -22,11 +22,12 @@
   "CLOSE":      "Close",
   "SAVE":       "Save",
   "DELETE":     "Delete",
+  "SEARCH":     "Search",
 
   "TYPE_OF_AGENDA": "Type of schedule",
 
   "LOCALITY":   "Locality",
-  "CITY":       "City",
+  "CITY":       "Province",
   "TYPE":       "Type",
   "URL":        "URL",
   "IP":         "IP",
