--- a/services/dashboard/src/App/locales/es.json
+++ b/services/dashboard/src/App/locales/es.json
@@ -22,11 +22,12 @@
   "CLOSE":      "Cerrar",
   "SAVE":       "Guardar",
   "DELETE":     "Eliminar",
+  "SEARCH":     "Buscar",
 
   "TYPE_OF_AGENDA": "Tipo de agenda",
 
   "LOCALITY":   "Localidad",
-  "CITY":       "Ciudad",
+  "CITY":       "Departamento",
   "TYPE":       "Tipo",
   "URL":        "URL",
   "IP":         "IP",
