--- a/services/mobileDistriTV/app/src/main/res/values-es/strings.xml
+++ b/services/mobileDistriTV/app/src/main/res/values-es/strings.xml
@@ -5,8 +5,13 @@
     <string name="device_info_title">Ingresar el código</string>
     <string name="device_info_register_button">Registrar</string>
     <string name="device_info_switch_external">Utilizar almacenamiento externo para guardar los contenidos</string>
-    <string name="dialog_title">Guardar contenidos en almacenamiento externo</string>
-    <string name="dialog_message">Los contenidos descargados serán almacenados en una memoria externa. Asegurese de tener siempre conectado el almacenamiento, de lo contrario podría provocar un mal funcionamiento.\nUna vez que registre el código de TV no podrá deshacer esta decisión.</string>
+    <string name="dialog_title_to_external">Guardar contenidos en almacenamiento externo</string>
+    <string name="dialog_title_to_internal">Guardar contenidos en almacenamiento interno</string>
+    <string name="dialog_message_to_external">Los contenidos descargados serán almacenados en una memoria externa.\nAsegurese de tener siempre conectado el almacenamiento, de lo contrario podría provocar un mal funcionamiento.</string>
+    <string name="dialog_message_home_to_external">Los contenidos descargados serán almacenados en una memoria externa.\nAsegurese de tener siempre conectado el almacenamiento, de lo contrario podría provocar un mal funcionamiento.\nUna vez que confirme su decisión se moverán todos los contenidos descargados.</string>
+    <string name="dialog_message_home_to_internal">Los contenidos descargados serán almacenados en el almacenamiento interno.\nUna vez que confirme su decisión se moverán todos los contenidos descargados.</string>
+    <string name="dialog_title_permission_denied">Permiso denegado</string>
+    <string name="dialog_message_permission_denied">El almacenamiento externo no se utilizará porque se denegó el permiso.</string>
     <string name="dialog_accept">Aceptar</string>
     <string name="dialog_cancel">Cancelar</string>
     <string name="msg_tv_code_invalid">El código ingresado no es válido</string>
@@ -17,6 +22,7 @@
     <string name="info_card_version">Versión:</string>
     <string name="info_card_tv_code">Código de TV:</string>
     <string name="info_card_connection_status">Estado de conexión:</string>
+    <string name="info_card_switch_external">Usar almacenamiento externo</string>
     <string name="language">Idioma:</string>
     <string name="language_select">Seleccionar idioma</string>
     <string-array name="languages">
