--- a/services/mobileDistriTV/app/src/main/res/values/strings.xml
+++ b/services/mobileDistriTV/app/src/main/res/values/strings.xml
@@ -4,8 +4,13 @@
     <string name="device_info_title">Enter the TV code</string>
     <string name="device_info_register_button">Register</string>
     <string name="device_info_switch_external">Use external storage to save the contents</string>
-    <string name="dialog_title">Save content on external storage</string>
-    <string name="dialog_message">The downloaded contents will be stored in an external memory. Make sure you always have the storage connected, otherwise it may cause a malfunction.\nOnce you register the TV code, you cannot undo this decision.</string>
+    <string name="dialog_title_to_external">Save content on external storage</string>
+    <string name="dialog_title_to_internal">Save content on internal storage</string>
+    <string name="dialog_message_to_external">The downloaded contents will be stored in an external memory.\nMake sure you always have the storage connected, otherwise it may cause a malfunction.</string>
+    <string name="dialog_message_home_to_external">The downloaded contents will be stored in an external memory.\nMake sure you always have the storage connected, otherwise it may cause a malfunction.\nOnce you confirm your decision, all downloaded content will be moved.</string>
+    <string name="dialog_message_home_to_internal">The downloaded contents will be stored in the internal storage.\nOnce you confirm your decision, all the downloaded contents will be moved.</string>
+    <string name="dialog_title_permission_denied">Permission denied</string>
+    <string name="dialog_message_permission_denied">External storage will not be used because permission was denied.</string>
     <string name="dialog_accept">Accept</string>
     <string name="dialog_cancel">Cancel</string>
     <string name="msg_tv_code_invalid">The code entered is invalid</string>
@@ -16,6 +21,7 @@
     <string name="info_card_version">Version:</string>
     <string name="info_card_tv_code">TV code:</string>
     <string name="info_card_connection_status">Connection status:</string>
+    <string name="info_card_switch_external">Use external storage</string>
     <string name="language">Language:</string>
     <string name="language_select">Select language</string>
     <string-array name="languages">
