--- a/services/dashboard/src/App/locales/en.json
+++ b/services/dashboard/src/App/locales/en.json
@@ -17,6 +17,8 @@
   "EDIT":           "Edit",
   "DELETE_WARNING": "Are you sure you want to delete the ",
 
+  "STATUS":     "Status",
+
   "ACTION":     "Action",
   "NEW":        "New",
   "CLOSE":      "Close",
@@ -40,5 +42,27 @@
   "DESCRIPTION":"Description",
   "TV_CODE":    "TV Code",
   "CRONTAB":    "Crontab",
-  "NAME":       "Name"  
+  "NAME":       "Name",
+
+
+  "SUN": "Sunday",
+  "MON": "Monday",
+  "TUE": "Tuesday",
+  "WED": "Wednesday",
+  "THU": "Thursday",
+  "FRI": "Friday",
+  "SAT": "Saturday",
+
+  "JAN": "January",
+  "FEB": "February",
+  "MAR": "March",
+  "APR": "April",
+  "MAY": "May",
+  "JUN": "June",
+  "JUL": "July",
+  "AUG": "Augost",
+  "SEP": "September",
+  "OCT": "October",
+  "NOV": "November",
+  "DEC": "December"
 }
