--- a/services/dashboard/src/App/locales/es.json
+++ b/services/dashboard/src/App/locales/es.json
@@ -18,6 +18,8 @@
   "DELETE_WARNING": "¿Está seguro que desea eliminar ",
 
   "STATUS":     "Estado",
+  "DATE":       "Día",
+  "TIME":       "Hora",
 
   "ACTION":     "Acción",
   "NEW":        "Nuevo",
