--- a/services/mobileDistriTV/app/src/main/res/values/strings.xml
+++ b/services/mobileDistriTV/app/src/main/res/values/strings.xml
@@ -22,6 +22,9 @@
     <string name="info_card_tv_code">TV code:</string>
     <string name="info_card_connection_status">Connection status:</string>
     <string name="info_card_switch_external">Use external storage</string>
+    <string name="info_card_anticipation_days">Anticipation for downloads:</string>
+    <string name="info_card_anticipation_spinner_title">Download schedules and contents with an anticipation of up to:</string>
+    <string name="days">days</string>
     <string name="language">Language:</string>
     <string name="language_select">Select language</string>
     <string-array name="languages">
