--- a/services/dashboard/src/App/locales/en.json
+++ b/services/dashboard/src/App/locales/en.json
@@ -75,5 +75,8 @@
   "SEP": "September",
   "OCT": "October",
   "NOV": "November",
-  "DEC": "December"
+  "DEC": "December",
+
+
+  "allProcessesAreRunning": "All process are running"
 }
