--- a/services/dashboard/src/App/locales/es.json
+++ b/services/dashboard/src/App/locales/es.json
@@ -75,5 +75,7 @@
   "SEP": "Setiembre",
   "OCT": "Octubre",
   "NOV": "Noviembre",
-  "DEC": "Diciembre"
+  "DEC": "Diciembre",
+
+  "allProcessesAreRunning": "Todos los procesos están corriendo"
 }
