--- a/services/dashboard/src/App/locales/es.json
+++ b/services/dashboard/src/App/locales/es.json
@@ -77,5 +77,24 @@
   "NOV": "Noviembre",
   "DEC": "Diciembre",
 
-  "allProcessesAreRunning": "Todos los procesos están corriendo"
+  "allProcessesAreRunning": "Todos los procesos están corriendo",
+  "appIsVisible" : "App Visible",
+  "availableMem": "Memoria disponible ",
+  "availableStorage" : "Almacenamiento disponible",
+  "availableStorageUnit": "Unidad de almacenamiento",
+  "currentDate": "Fecha actual",
+  "currentVersionApp": "App Versión",
+  "currentlyPlayingContentId": "Contenido en reproducción",
+  "externalStoragePermissionGranted": "Almacenamiento externo habilitado",
+  "isAnyAlertPlaying": "Alerta reproduciendose",
+  "isAnyContentPlaying": "Contenido reproduciendose" ,
+  "isExternalStorageConnected": "Almacenamiento externo conectado",
+  "memUnit": "Unidades de memoria",
+  "sdkVersion": "Versión sdk",
+  "totalMem": "Memoria total",
+  "totalStorage": "Almacenamiento total",
+  "totalStorageUnit": "Almacenamiento total unidades",
+  "tvCode": "Código TV",
+  "useExternalStorage": "Usar almacenamiento externo"
+
 }
